[package]
name = "raving"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.36", features = ["linked"] }
ash-window = "0.9.1"
gpu-allocator = { version = "0.17", features = ["vulkan"] }
rspirv-reflect = "0.6"

winit = "0.25"

crossbeam = "0.8"
parking_lot = "0.11.1"

version_check = { version = "0.9.4" }

rhai = { version = "1.6", features = ["sync", "f32_float"] }
bytemuck = { version = "1.7", features = ["derive"] }
zerocopy = "0.6.1"

image = "0.23"

anyhow = "1.0"

thunderdome = "0.5"
rustc-hash = "1.1"

bstr = "0.2"

log = "0.4"

# [profile.dev]
# opt-level = 2
